<resources>
    <string name="app_name">机器人聚合器</string>
    <string name="add_robot">添加机器人</string>
    <string name="robot_name">机器人名称</string>
    <string name="api_url">API地址</string>
    <string name="api_key">API密钥</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="test_connection">测试连接</string>
    <string name="connection_success">连接成功</string>
    <string name="connection_failed">连接失败</string>
    <string name="send_message">发送消息</string>
    <string name="message_hint">输入消息...</string>
    <string name="robot_list">机器人列表</string>
    <string name="settings">设置</string>
    <string name="about">关于</string>
    <string name="version">版本 1.0</string>
    <string name="no_robots">暂无机器人，请添加一个机器人</string>
    <string name="robot_added">机器人添加成功</string>
    <string name="robot_updated">机器人更新成功</string>
    <string name="robot_deleted">机器人删除成功</string>
    <string name="error_occurred">发生错误</string>
    <string name="please_fill_all_fields">请填写所有字段</string>
    <string name="invalid_url">无效的URL地址</string>
    <string name="confirm_delete">确认删除</string>
    <string name="delete_robot_message">确定要删除这个机器人吗？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
</resources>